Fixing #5401:  The context menu break layout with Office2003 and V2 skin on IE quirk mode.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@5319 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/v2/menu.css
+++ b/_source/skins/v2/menu.css
@@ -58,6 +58,7 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	float: left;
 	filter: alpha(opacity=70); /* IE */
 	opacity: 0.70; /* Safari, Opera and Mozilla */
+	clear: both;
 }
 
 .cke_rtl .cke_skin_v2 .cke_menuitem .cke_icon_wrapper
